<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/trailsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" 
                android:background="@drawable/carrot_button"
                android:paddingRight="@dimen/whats_on_button_right_padding">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/trailsTitle"
                        style="@android:style/TextAppearance.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Trails" />

                    <TextView
                        android:id="@+id/trails"
                        style="@android:style/TextAppearance.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignWithParentIfMissing="true"
                        android:layout_below="@id/trailsTitle"
                        android:text="Tap to select trails." />
                </LinearLayout>

<!--                 <ImageView
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:focusable="false"
                    android:paddingLeft="@dimen/whats_on_button_right_padding"
                    android:paddingRight="@dimen/whats_on_button_right_padding"
                    android:src="@drawable/carrot_button" >
                </ImageView> -->
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/selectCondition" />

            <org.bouldermountainbike.smarttrail.ui.ConditionView
                android:id="@+id/conditionView"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:gravity="top"
                android:hint="@string/commentHint"
                android:imeOptions="actionDone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirmCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
